<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Setup_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/raleway"
        android:text="Day Gold Lunch" />

    <TextView
        style="@style/Instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Lunch_blue_instructions" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/GL_Period1"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_1" />

            <EditText
                android:id="@+id/GL_Period2"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_2" />

            <EditText
                android:id="@+id/GL_Period3"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_3" />

            <EditText
                android:id="@+id/GL_Period4"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_4" />

            <EditText
                android:id="@+id/GL_Period5"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_5" />

            <EditText
                android:id="@+id/GL_Period6"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_6" />

            <EditText
                android:id="@+id/GL_Period7"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_7" />

            <TextView
                android:id="@+id/gold_lunch_next"
                style="@style/Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:clickable="true"
                android:text="@string/next"
                android:textAlignment="center" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>