<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_margin="20dp"
        style="@style/Setup_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/lunch_blue_title" />

    <TextView
        style="@style/Instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/Lunch_blue_instructions"
        android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_1"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_2"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_3"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_4"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_5"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_6"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/BL_Period7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/period_7"/>

            <TextView
                style="@style/Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/next"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="#ffffff"
                android:id="@+id/blue_lunch_next"
                android:clickable="true"/>

        </LinearLayout>



    </ScrollView>





</LinearLayout>